[maven-release-plugin] prepare release SansOrm-1.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
    <groupId>com.zaxxer</groupId>
    <artifactId>SansOrm</artifactId>
-   <version>1.0-SNAPSHOT</version>
+   <version>1.0</version>
    <packaging>bundle</packaging>
 
    <name>SansOrm</name>
-   <description>A &quot;No-ORM&quot; sane SQL &lt;-&gt; Java object mapping library</description>
+   <description>A "No-ORM" sane SQL &lt;-&gt; Java object mapping library</description>
    <url>https://github.com/brettwooldridge/SansOrm</url>
 
    <organization>
