--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
          <version>4.11</version>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>org.postgresql</groupId>
+         <artifactId>postgresql</artifactId>
+         <version>9.3-1101-jdbc41</version>
+         <scope>provided</scope>
+      </dependency>
    </dependencies>
 
    <build>
@@ -94,6 +100,7 @@
             <configuration>
                <instructions>
                   <Export-Package>com.zaxxer.sansorm</Export-Package>
+                  <Import-Package>org.slf4j,javax.persistence,javax.sql,javax.transaction;resolution:=optional,org.postgresql.util;resolution:=optional</Import-Package>
                   <Private-Package>com.zaxxer.sansorm.internal</Private-Package>
                   <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
                </instructions>
