--- a/pom.xml
+++ b/pom.xml
@@ -93,9 +93,18 @@
    <build>
       <plugins>
          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.3</version>
+            <configuration>
+               <source>1.8</source>
+               <target>1.8</target>
+            </configuration>
+         </plugin>
+         <plugin>
             <groupId>org.apache.felix</groupId>
             <artifactId>maven-bundle-plugin</artifactId>
-            <version>2.3.7</version>
+            <version>2.5.0</version>
             <extensions>true</extensions>
             <configuration>
                <instructions>
@@ -109,7 +118,7 @@
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
-            <version>2.2.1</version>
+            <version>2.4</version>
             <configuration>
                <!-- outputDirectory>/absolute/path/to/the/output/directory</outputDirectory> 
                   <finalName>filename-of-generated-jar-file</finalName -->
@@ -127,7 +136,7 @@
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>2.9.1</version>
+            <version>2.10.3</version>
             <configuration>
                <show>public</show>
                <excludePackageNames>com.zaxxer.sansorm.*</excludePackageNames>
