add some tests for SqlClosureElf using H2 database as a backend

--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,24 @@
          <scope>test</scope>
       </dependency>
       <dependency>
+         <groupId>com.h2database</groupId>
+         <artifactId>h2</artifactId>
+         <version>1.4.191</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.codehaus.btm</groupId>
+         <artifactId>btm</artifactId>
+         <version>2.1.4</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>slf4j-simple</artifactId>
+         <version>1.7.16</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
          <groupId>org.postgresql</groupId>
          <artifactId>postgresql</artifactId>
          <version>9.3-1101-jdbc41</version>
