--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,9 @@
 
    <dependencies>
       <dependency>
-         <groupId>javax.persistence</groupId>
-         <artifactId>persistence-api</artifactId>
-         <version>1.0.2</version>
+         <groupId>org.eclipse.persistence</groupId>
+         <artifactId>javax.persistence</artifactId>
+         <version>2.1.0</version>
          <scope>provided</scope>
       </dependency>
       <dependency>
