--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
    <groupId>com.zaxxer</groupId>
    <artifactId>sansorm</artifactId>
-   <version>2.6</version>
+   <version>2.7-SNAPSHOT</version>
    <packaging>bundle</packaging>
 
    <name>SansOrm</name>
