have travis call to update the codecov.io reports

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,8 @@ cache:
 jdk:
   - oraclejdk8
 
+script:
+  - mvn package -Dmaven.javadoc.skip=true -V -B
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
