--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
    <groupId>com.zaxxer</groupId>
    <artifactId>sansorm</artifactId>
-   <version>3.8-SNAPSHOT</version>
+   <version>4.0-SNAPSHOT</version>
    <packaging>bundle</packaging>
 
    <name>SansOrm</name>
@@ -54,72 +54,67 @@
 
    <dependencies>
       <dependency>
-         <groupId>org.eclipse.persistence</groupId>
-         <artifactId>javax.persistence</artifactId>
-         <version>2.1.0</version>
-         <scope>provided</scope>
+         <groupId>jakarta.persistence</groupId>
+         <artifactId>jakarta.persistence-api</artifactId>
+         <version>3.1.0</version>
+         <scope>compile</scope>
+         <optional>true</optional>
       </dependency>
       <dependency>
-         <groupId>javax.transaction</groupId>
-         <artifactId>transaction-api</artifactId>
-         <version>1.1</version>
+         <groupId>jakarta.transaction</groupId>
+         <artifactId>jakarta.transaction-api</artifactId>
+         <version>2.0.1</version>
          <scope>provided</scope>
       </dependency>
       <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
-         <version>1.7.25</version>
+         <version>1.7.36</version>
          <scope>provided</scope>
       </dependency>
       <dependency>
          <groupId>org.apache.felix</groupId>
          <artifactId>maven-bundle-plugin</artifactId>
-         <version>2.3.7</version>
+         <version>5.1.9</version>
          <type>maven-plugin</type>
          <scope>provided</scope>
          <optional>true</optional>
       </dependency>
       <dependency>
-         <groupId>javax.transaction</groupId>
-         <artifactId>javax.transaction-api</artifactId>
-         <version>1.2</version>
-         <scope>compile</scope>
-         <optional>true</optional>
-      </dependency>
-      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
-         <version>4.12</version>
+         <version>4.13.2</version>
          <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>com.h2database</groupId>
          <artifactId>h2</artifactId>
          <version>1.4.191</version>
+         <!-- <version>2.2.224</version>-->
          <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>com.zaxxer</groupId>
          <artifactId>HikariCP</artifactId>
-         <version>2.7.2</version>
+         <version>5.1.0</version>
          <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>org.assertj</groupId>
          <artifactId>assertj-core</artifactId>
-         <version>3.8.0</version>
+         <version>3.24.2</version>
          <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-simple</artifactId>
-         <version>1.7.25</version>
+         <version>1.7.36</version>
          <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>org.postgresql</groupId>
          <artifactId>postgresql</artifactId>
-         <version>9.4-1206-jdbc42</version>
+         <version>42.6.0</version>
          <scope>provided</scope>
          <optional>true</optional>
       </dependency>
@@ -127,6 +122,7 @@
          <groupId>org.xerial</groupId>
          <artifactId>sqlite-jdbc</artifactId>
          <version>3.20.1</version>
+         <!-- <version>3.42.0.0</version> -->
          <scope>test</scope>
       </dependency>
    </dependencies>
@@ -168,7 +164,7 @@
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.20</version>
+            <version>3.2.3</version>
             <configuration>
                <!-- Sets the VM argument line used when unit tests are run. -->
                <argLine>${surefireArgLine} ${sureFireOptions9}</argLine>
@@ -181,16 +177,16 @@
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.3</version>
+            <version>3.12.1</version>
             <configuration>
-               <source>1.8</source>
-               <target>1.8</target>
+               <source>17</source>
+               <target>17</target>
             </configuration>
          </plugin>
          <plugin>
             <groupId>org.apache.felix</groupId>
             <artifactId>maven-bundle-plugin</artifactId>
-            <version>2.5.0</version>
+            <version>5.1.9</version>
             <extensions>true</extensions>
             <configuration>
                <instructions>
